--- a/estilos/style.css
+++ b/estilos/style.css
@@ -4,3 +4,53 @@
     marron: #593723
     amarelo: #F2C572
 */
+:root{
+    ---amarelo:#F2C572;
+    ---marron: #593723;
+}
+*{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+
+body, html{
+    background-color: #F2C572;
+    height: 100vh;
+    width: 100vw;
+}
+
+main{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+section#login{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+
+    background-color: rgba(255, 255, 255, 0.819);
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.479);
+   
+}
+section#login > div#imagem{
+    display: block;
+    background: var(---amarelo) url(../imagens/praia.jpg) no-repeat;
+    height: 200px;
+    background-size: cover;
+    background-position: center;
+}
+
+section#login > div#formulario {
+    display: block;
+    padding: 10px;
+}
+
