--- a/estilos/style.css
+++ b/estilos/style.css
@@ -36,7 +36,7 @@ section#login{
 
     background-color: rgba(255, 255, 255, 0.819);
     width: 256px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.479);
 
@@ -63,5 +63,58 @@ div#formulario > h1{
 }
 
 div#formulario > p{
+    font-size: 0.8em;
+}
+
+form > div.campo{
+    background-color: #F2C572;
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+div.campo > label {
+    display: none;
+}
+
+form > input[type=submit]{
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #593723;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover{
+    background-color: #352115;
+}
+
+form > a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top:7px;
+    margin-top: 5px;
+    background-color: wheat;
+    border: 1.5px solid #593723;
+    border-radius: 5px;
+    text-decoration: none;
+    color: #22150d;
+}
+
+form > a.botao:hover{
+    background-color: #9c6240;
+
+}
+
+form > a.botao > span{
     font-size: 0.8em;
 }
