--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -9,11 +9,12 @@ Grandes telas acima de 1200px
 */
 
 @media  screen and (min-width: 800px) and (max-width: 992px) {
-    body{
+    body{ /*configuração para tablet*/
         background-image: linear-gradient(to top, #593723, #F2C572);
     }
     section#login{
         width: 80vw;
+        height: 290px;
     }
     section#login > div#imagem{
         float: left;
@@ -26,12 +27,13 @@ Grandes telas acima de 1200px
     }
 }
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 992px) { /*configurações para desktop*/
     body{
         background-image: linear-gradient(to top, #593723, #F2C572);
     }
     section#login {
         width: 950px;
+        height: 350px;
     }
     section#login > div#imagem{
         float: right;
@@ -48,6 +50,8 @@ Grandes telas acima de 1200px
     }
 
     div#formulario > p{
-        font-size: 1.2em;
+        font-size: 1em;
+        margin: 20px 0px;
+        
     }
 }
